@@ -1,3 +1,9 @@
+2003-09-17  James Henstridge  <james@daa.com.au>
+
+	* module.py (_isxterm): same here.
+
+	* bootstrap.py (_isxterm): rxvt can do xterm title escapes.
+
 2003-09-15  Bryan Forbes  <mxpxfifws@yahoo.com>
 
 	* modulesets/gnome24.modules: Really use gnome-2-4 branch of gedit (oops);
